The Confessions of St. Augustene

--- a/TheConfessions.tex
+++ b/TheConfessions.tex
@@ -10,9 +10,11 @@
 \usepackage{expl3}
 \usepackage{xparse}
 
-\title{The Confessions \\of Saint Augustine}
+\title{The Confessions of \\Saint Augustine}
 
-\author{Saint Augustine}
+\author{Saint Augustine\\\small{Bishop of Hippo}\\\\\tiny{Translated by E. B. Pusey (Edward Bouverie)}}
+
+\date{AD 401}
 
 % \renewcommand{\thechapter}{\Roman{chapter}}
 \usepackage{fancyhdr}
